<resources>
    <string name="app_name" translatable="false">Stand Up</string>

    <!-- General -->
    <string name="general_unknown">Unknown</string>
    <string name="general_hyphen" translatable="false">-</string>
    <string name="general_range" translatable="false">%1s - %2s</string>
    <string name="general_points_abbrev">%1d pts.</string>
    <string name="general_minute_abbrev">%1d min.</string>
    <string name="general_hours">%1d hour(s)</string>
    <string name="general_weeks">%1d week(s)</string>
    <string name="general_days">%1d day(s)</string>
    <string name="general_months">%1d month(s)</string>
    <string name="general_years_abbrev">%1d yrs.</string>
    <string name="general_about_minute_abbrev">About %1d min.</string>
    <string name="general_times">%1d time(s)</string>
    <string name="general_plus_points" translatable="false">(+%1d pts.)</string>
    <string name="general_minus_points" translatable="false">(-%1d pts.)</string>
    <string name="general_load_failed">Fail to load contents</string>
    <string name="general_visited_places">%1d places</string>
    <string name="general_retry">Retry</string>
    <string name="general_plus_or_minus" translatable="false">(\u00B1 %d)</string>
    <string name="general_switch_on">On</string>
    <string name="general_switch_off">Off</string>

    <!-- Error -->
    <string name="error_general">Error</string>
    <string name="error_no_internect_connection">No internet connection</string>
    <string name="error_google_play_service_outdated">Outdated version of Google Play service</string>
    <string name="error_google_api">Google Api error</string>
    <string name="error_no_google_account">No signed Google account</string>
    <string name="error_http_connection">Http connection error</string>
    <string name="error_firebase_invalid_user">Invalid account</string>
    <string name="error_firebase_user_collision">Account already exists</string>
    <string name="error_firebase_invalid_credential">Invalid credential</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="error_whitelist_denied">Whitelist denied</string>
    <string name="error_no_matched_entity">No matched entity</string>
    <string name="error_no_matched_field">No matched field</string>
    <string name="error_no_document_reference">No document reference</string>
    <string name="error_empty_input">Empty input</string>

    <!-- Toast -->
    <string name="toast_welcome">Welcome, %1s</string>

    <!-- Dialog -->
    <string name="dialog_permission_rationale_title">Permissions required</string>
    <string name="dialog_permission_rationale_text">To track your sitting history, we need some permissions.</string>
    <string name="dialog_permission_denied_title">Permission rejected</string>
    <string name="dialog_permission_denied_text">If you reject any permission, you are unavailable to use this app. Please grant permissions at settings.</string>

    <!-- Title -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_timeline">Timeline</string>
    <string name="title_config">Config</string>

    <!-- Texts for Dashboard -->
    <string name="dashboard_stat_mission"># Successes</string>
    <string name="dashboard_stat_incentive">Points obtained</string>

    <string name="dashboard_stat_total_sedentary_time_label">Daily sedentary time (min.)</string>
    <string name="dashboard_stat_avg_sedentary_time_label">Avg. sedentary time (min.)</string>
    <string name="dashboard_stat_num_stand_up_label"># Stand-up</string>

    <string name="dashboard_chart_title">Avg. sedentary time and points</string>

    <!-- Texts for Timeline -->
    <string name="timeline_title_place">Places Visited</string>
    <string name="timeline_tab_item_daily">Daily</string>
    <string name="timeline_tab_item_place">Place</string>
    <string name="timeline_list_panel_mission_stat">%1d / %2d time(s)</string>
    <string name="timeline_list_panel_avg_sedentary_stat">%1d (±%2d) min.</string>

    <string name="timeline_list_item_mission_success">Success!</string>
    <string name="timeline_list_item_mission_failure">Failure!</string>
    <string name="timeline_list_item_mission_bid_positive_success">Got %1d pts.</string>
    <string name="timeline_list_item_mission_bid_negative_success">Kept %1d pts.</string>
    <string name="timeline_list_item_mission_bid_positive_failure">Lost a chance to get %1d pts.</string>
    <string name="timeline_list_item_mission_bid_negative_failure">Lost %1d pts.</string>
    <string name="timeline_list_item_mission_bid_no_point">No incentive mission</string>
    <string name="timeline_list_item_place_visit_stat">%1s · %2d visits</string>
    <string name="timeline_list_item_place_mission_stat">%1d / %2d successes · %3d pts.</string>

    <string name="timeline_place_order_menu">Sort</string>
    <string name="timeline_place_order_field">Field</string>
    <string name="timeline_place_order_field_visit_time">Visited time</string>
    <string name="timeline_place_order_field_duration">Duration</string>
    <string name="timeline_place_order_field_num_visits">Visits</string>
    <string name="timeline_place_order_field_num_missions">Missions</string>
    <string name="timeline_place_order_field_incentives">Incentives</string>

    <string name="timeline_place_order_direction">Order</string>
    <string name="timeline_place_order_direction_ascending">Ascending</string>
    <string name="timeline_place_order_direction_descending">Descending</string>

    <string name="timeline_place_rename">Rename</string>
    <string name="timeline_place_rename_hint">Type a place name you want.</string>

    <string name="timeline_place_detail">Detail</string>


    <!-- Config -->
    <string name="config_header_general">General</string>
    <string name="config_item_user_name">User name</string>
    <string name="config_item_email">Email</string>
    <string name="config_item_permissions">Permission</string>
    <string name="config_item_permissions_granted">Granted</string>
    <string name="config_item_permissions_denied">Denied</string>

    <string name="config_header_mission">Mission</string>
    <string name="config_item_is_mission_triggered">Mission on/off</string>
    <string name="config_item_is_mission_triggered_on">On</string>
    <string name="config_item_is_mission_triggered_off">Off</string>
    <string name="config_item_mission_time_range">Mission available time (at least 12 hrs)</string>
    <string name="config_item_do_not_disturb">Do-not-disturb</string>
    <string name="config_item_do_not_disturb_set">%1s minute(s) left / %2d time(s) available</string>
    <string name="config_item_do_not_disturb_unset">Not set / %1d time(s) available.</string>
    <string name="config_item_do_not_disturb_value_formatter">In %1d minute(s)</string>


    <string name="config_header_debug">Debug</string>
    <string name="config_item_min_stay_time">Duration for stay event</string>
    <string name="config_item_min_mission_trigger_time">Duration for mission trigger</string>
    <string name="config_item_mission_timeout">Mission timeout</string>
    <string name="config_max_daily_budget">Daily budget</string>
    <string name="config_max_daily_do_not_disturb">Daily chances for do-not-disturb mode</string>
    <string name="config_win_size_incentive_calc">Duration for incentive calculation</string>
    <string name="config_num_data_incentive_calc"># missions for incentive calculation</string>
    <string name="config_range_incentive">Range of incentive amount</string>
    <string name="config_default_incentive">Default incentive amount</string>
    <string name="config_unit_incentive">Unit step of incentive amount</string>
    <string name="config_incentive_mode">Incentive mode</string>
    <string name="config_incentive_mode_stochastic">Stochastic mode</string>
    <string name="config_incentive_mode_fixed">Fixed mode</string>
    <string name="config_incentive_mode_none">Non-incentive mode</string>
    <string name="config_incentive_gain_or_loss">Incentive Gain/Loss</string>
    <string name="config_incentive_gain_or_loss_gain">Gain</string>
    <string name="config_incentive_gain_or_loss_loss">Loss</string>
    <string name="config_mock_still_event">Mock Still Event</string>
    <string name="config_mock_still_event_desc">Generate mock still event and start a mission</string>
    <string name="config_mock_stand_up_event">Mock Stand-up Event</string>
    <string name="config_mock_stand_up_event_desc">Generate mock stand-up event</string>

    <string name="config_header_others">Others</string>
    <string name="config_item_app_version">Version</string>
    <string name="config_item_sign_out">Sign out</string>
    <string name="config_item_sign_out_desc">Sign out the account from this device.</string>

    <!-- Notification channel descriptions -->
    <string name="ntf_channel_name_foreground">Foreground</string>
    <string name="ntf_channel_name_mission_start">Mission start</string>
    <string name="ntf_channel_name_mission_success">Mission success</string>
    <string name="ntf_channel_name_mission_failure">Mission failure</string>

    <!-- Notification texts -->
    <string name="ntf_foreground_title_sedentary">You\'re Sitting Still</string>
    <string name="ntf_foreground_title_stand_up">You\'ve Stood Up</string>
    <string name="ntf_foreground_text_default">Activity tracking in progress…</string>
    <string name="ntf_foreground_title_do_not_disturb">Do-not-disturb Mode</string>
    <string name="ntf_foreground_text_do_not_disturb">Suspend missions until %s</string>
    <string name="ntf_foreground_action_cancel">Cancel</string>

    <string name="ntf_mission_start_title">Time to stand up!</string>
    <string name="ntf_mission_start_text_gain">You have sit for %1d minutes. Stand up and move around for a while to get %2d points.</string>
    <string name="ntf_mission_start_text_loss">You have sit for %1d minutes. Stand up and move around for a while to keep %2d points.</string>
    <string name="ntf_mission_start_text_none">You have sit for %1d minutes. Stand up and move around for a while.</string>

    <string name="ntf_mission_success_title">Mission success!</string>
    <string name="ntf_mission_success_text_gain">Good job. You got %d points.</string>
    <string name="ntf_mission_success_text_loss">Good job. You keep %d points.</string>
    <string name="ntf_mission_success_text_none">Good job.</string>

    <string name="ntf_mission_failure_title">Mission failure!</string>
    <string name="ntf_mission_failure_text_gain">Unfortunately, you lost a chance for %d points.</string>
    <string name="ntf_mission_failure_text_loss">Unfortunately, you lost %d points.</string>
    <string name="ntf_mission_failure_text_none">Unfortunately, you failed this mission.</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
