<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeline_place_order_direction"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_default"
            android:paddingBottom="@dimen/space_vertical_small"/>

        <RadioGroup
            android:id="@+id/group_place_order_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/space_vertical_medium"
            android:showDividers="middle"
            android:divider="@drawable/bg_empty_divider">

            <RadioButton
                android:id="@+id/btn_place_order_direction_descending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_text_radio_button"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:paddingStart="@dimen/space_horizontal_default"
                android:paddingTop="@dimen/space_vertical_default"
                android:paddingEnd="@dimen/space_horizontal_default"
                android:paddingBottom="@dimen/space_vertical_default"
                android:text="@string/timeline_place_order_direction_descending"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_size_default" />

            <RadioButton
                android:id="@+id/btn_place_order_direction_ascending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_text_radio_button"
                android:button="@android:color/transparent"
                android:gravity="center"
                android:paddingStart="@dimen/space_horizontal_large"
                android:paddingTop="@dimen/space_vertical_default"
                android:paddingEnd="@dimen/space_horizontal_large"
                android:paddingBottom="@dimen/space_vertical_default"
                android:text="@string/timeline_place_order_direction_ascending"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_size_default" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/timeline_place_order_field"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_size_default"
            android:paddingBottom="@dimen/space_vertical_small"/>

        <RadioGroup
            android:id="@+id/group_place_order_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="@drawable/bg_empty_divider">

            <RadioButton
                android:id="@+id/btn_place_order_field_visit_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_radio_button"
                android:button="@android:color/transparent"
                android:paddingStart="@dimen/space_horizontal_large"
                android:paddingTop="@dimen/space_vertical_default"
                android:paddingEnd="@dimen/space_horizontal_large"
                android:paddingBottom="@dimen/space_vertical_default"
                android:text="@string/timeline_place_order_field_visit_time"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_size_default" />

            <RadioButton
                android:id="@+id/btn_place_order_field_incentive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_radio_button"
                android:button="@android:color/transparent"
                android:paddingStart="@dimen/space_horizontal_large"
                android:paddingTop="@dimen/space_vertical_default"
                android:paddingEnd="@dimen/space_horizontal_large"
                android:paddingBottom="@dimen/space_vertical_default"
                android:text="@string/timeline_place_order_field_incentives"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_size_default" />

            <RadioButton
                android:id="@+id/btn_place_order_field_num_mission"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_radio_button"
                android:button="@android:color/transparent"
                android:paddingStart="@dimen/space_horizontal_large"
                android:paddingTop="@dimen/space_vertical_default"
                android:paddingEnd="@dimen/space_horizontal_large"
                android:paddingBottom="@dimen/space_vertical_default"
                android:text="@string/timeline_place_order_field_num_missions"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_size_default" />

            <RadioButton
                android:id="@+id/btn_place_order_field_num_visits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_radio_button"
                android:button="@android:color/transparent"
                android:paddingStart="@dimen/space_horizontal_large"
                android:paddingTop="@dimen/space_vertical_default"
                android:paddingEnd="@dimen/space_horizontal_large"
                android:paddingBottom="@dimen/space_vertical_default"
                android:text="@string/timeline_place_order_field_num_visits"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_size_default" />
        </RadioGroup>
    </LinearLayout>
</layout>
