<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="java.util.concurrent.TimeUnit" />

        <import type="kaist.iclab.standup.smi.common.Formatter" />

        <import type="android.view.View" />

        <import type="android.text.format.DateUtils" />

        <variable
            name="viewModel"
            type="kaist.iclab.standup.smi.ui.dashboard.DashboardViewModel" />

        <variable
            name="hasNext"
            type="Boolean" />

        <variable
            name="hasPrevious"
            type="Boolean" />
    </data>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardElevation="@dimen/card_view_elevation"
        app:cardUseCompatPadding="true"
        app:contentPaddingBottom="@dimen/card_view_padding_vertical"
        app:contentPaddingLeft="@dimen/card_view_padding_horizontal"
        app:contentPaddingRight="@dimen/card_view_padding_horizontal"
        app:contentPaddingTop="@dimen/card_view_padding_vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_left_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_left"
                android:tint="@color/light_grey"
                android:visibility="@{hasPrevious ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_current_date"/>

            <ImageView
                android:id="@+id/img_right_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_right"
                android:tint="@color/light_grey"
                android:visibility="@{hasNext ? View.VISIBLE : View.INVISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/txt_current_date"/>

            <TextView
                android:id="@+id/txt_current_date"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@{DateUtils.getRelativeTimeSpanString(viewModel.currentDateTime.millis, System.currentTimeMillis(), DateUtils.DAY_IN_MILLIS)}"
                android:textColor="@color/grey"
                android:textSize="@dimen/txt_size_medium"
                app:layout_constraintEnd_toStartOf="@id/img_right_more"
                app:layout_constraintStart_toEndOf="@id/img_left_more"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/img_right_more" />

            <FrameLayout
                android:id="@+id/container_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/space_vertical_default"
                app:layout_constraintLeft_toLeftOf="@id/img_left_more"
                app:layout_constraintRight_toRightOf="@id/img_right_more"
                app:layout_constraintTop_toBottomOf="@id/txt_current_date">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/general_load_failed"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/txt_size_default"
                    android:visibility="@{viewModel.dailyLoadStatus.failed ? View.VISIBLE : View.GONE}" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    crossFadeIn="@{viewModel.dailyLoadStatus.succeeded}"
                    duration="@{250}"
                    isGone="@{false}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.Guideline
                        android:id="@+id/guideline"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintGuide_percent="0.5" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/item_stat_mission"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintRight_toLeftOf="@id/guideline"
                        android:paddingRight="@dimen/space_horizontal_default"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/img_stat_mission"
                            android:layout_width="36dp"
                            android:layout_height="0dp"
                            android:src="@drawable/ic_mission"
                            android:tint="@color/blue"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintRight_toLeftOf="@id/txt_stat_mission_success"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_stat_mission_success"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.dailyNumMissionsSuccess.toString()}"                            android:textColor="@color/black"
                            android:textSize="@dimen/txt_size_large"
                            android:textStyle="bold"
                            app:layout_constraintLeft_toRightOf="@id/img_stat_mission"
                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:id="@+id/txt_stat_mission_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_grey"
                            android:textSize="@dimen/txt_size_medium"
                            android:textStyle="bold"
                            android:text="@{'/' + viewModel.dailyNumMissionsTriggered.toString()}"                            app:layout_constraintBottom_toBottomOf="@id/txt_stat_mission_success"
                            app:layout_constraintLeft_toRightOf="@id/txt_stat_mission_success" />

                        <TextView
                            android:id="@+id/txt_stat_mission_desc"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dashboard_stat_mission"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/txt_size_small"
                            app:layout_constraintLeft_toRightOf="@id/img_stat_mission"
                            app:layout_constraintTop_toBottomOf="@id/txt_stat_mission_success" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/item_stat_incentive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/space_horizontal_default"
                        app:layout_constraintLeft_toRightOf="@id/guideline"
                        app:layout_constraintTop_toTopOf="parent">

                        <ImageView
                            android:id="@+id/img_stat_incentive"
                            android:layout_width="36dp"
                            android:layout_height="0dp"
                            android:src="@drawable/ic_coin"
                            android:tint="@color/dark_yellow"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toLeftOf="@id/txt_stat_incentive_obtained"
                            app:layout_constraintTop_toTopOf="parent" />


                        <TextView
                            android:id="@+id/txt_stat_incentive_obtained"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="end"
                            android:textColor="@color/black"
                            android:textSize="@dimen/txt_size_large"
                            android:textStyle="bold"
                            android:text="@{viewModel.dailyIncentiveObtained.toString()}"                            app:layout_constraintLeft_toRightOf="@id/img_stat_incentive"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/txt_stat_incentive_total"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/light_grey"
                            android:textSize="@dimen/txt_size_medium"
                            android:textStyle="bold"
                            android:text="@{'/' + viewModel.dailyIncentiveTotal.toString()}"                            app:layout_constraintBottom_toBottomOf="@id/txt_stat_incentive_obtained"
                            app:layout_constraintLeft_toRightOf="@id/txt_stat_incentive_obtained"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/dashboard_stat_incentive"
                            android:textColor="@color/grey"
                            android:textSize="@dimen/txt_size_small"
                            app:layout_constraintLeft_toRightOf="@id/img_stat_incentive"
                            app:layout_constraintTop_toBottomOf="@id/txt_stat_incentive_obtained" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/space"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/space_vertical_medium"
                        app:layout_constraintTop_toBottomOf="@id/item_stat_mission" />

                    <TextView
                        android:id="@+id/txt_stat_total_sedentary_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:text="@{String.valueOf(TimeUnit.MILLISECONDS.toMinutes(viewModel.dailyTotalSedentaryMillis))}"
                        android:textSize="@dimen/txt_size_medium"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/txt_stat_avg_sedentary_time"
                        app:layout_constraintTop_toBottomOf="@id/space"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:maxLines="3"
                        android:text="@string/dashboard_stat_total_sedentary_time_label"
                        android:textSize="@dimen/txt_size_small"
                        app:layout_constraintLeft_toLeftOf="@id/txt_stat_total_sedentary_time"
                        app:layout_constraintRight_toRightOf="@id/txt_stat_total_sedentary_time"
                        app:layout_constraintTop_toBottomOf="@id/txt_stat_total_sedentary_time" />

                    <TextView
                        android:id="@+id/txt_stat_avg_sedentary_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="3"
                        android:text="@{String.valueOf(TimeUnit.MILLISECONDS.toMinutes(viewModel.dailyAvgSedentaryMillis))}"
                        android:textSize="@dimen/txt_size_medium"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/txt_stat_total_sedentary_time"
                        app:layout_constraintRight_toLeftOf="@id/txt_stat_num_stand_ups"
                        app:layout_constraintTop_toBottomOf="@id/space"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="3"
                        android:text="@string/dashboard_stat_avg_sedentary_time_label"
                        android:textSize="@dimen/txt_size_small"
                        app:layout_constraintLeft_toLeftOf="@id/txt_stat_avg_sedentary_time"
                        app:layout_constraintRight_toRightOf="@id/txt_stat_avg_sedentary_time"
                        app:layout_constraintTop_toBottomOf="@id/txt_stat_avg_sedentary_time" />

                    <TextView
                        android:id="@+id/txt_stat_num_stand_ups"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@{String.valueOf(viewModel.dailyTotalNumStandUp)}"
                        android:textSize="@dimen/txt_size_medium"
                        android:textStyle="bold"
                        app:layout_constraintLeft_toRightOf="@id/txt_stat_avg_sedentary_time"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/space"
                        app:layout_constraintWidth_percent="0.3" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:maxLines="3"
                        android:text="@string/dashboard_stat_num_stand_up_label"
                        android:textSize="@dimen/txt_size_small"
                        app:layout_constraintLeft_toLeftOf="@id/txt_stat_num_stand_ups"
                        app:layout_constraintRight_toRightOf="@id/txt_stat_num_stand_ups"
                        app:layout_constraintTop_toBottomOf="@id/txt_stat_num_stand_ups" />



                </androidx.constraintlayout.widget.ConstraintLayout>

                <ProgressBar
                    style="?android:progressBarStyleSmall"
                    android:visibility="@{viewModel.dailyLoadStatus.loading ? View.VISIBLE : View.GONE}"
                    android:layout_width="@dimen/size_progress_bar"
                    android:layout_height="@dimen/size_progress_bar"
                    android:layout_gravity="center"
                    android:indeterminateTint="@color/light_grey" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>